# uncertainty-rejection

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/uncertainty_rejection/: analysis.py  datasets.py  plotting.py
tests/: preds_mulsamples.npy  preds_onesample.npy  test_analysis.py  test_datasets.py  test_plotting.py  test_uncertainty_rejection.py  test_utils.py
