[tool.poetry]
name = "uncertainty_rejection"
version = "0.1.0"
description = "Analysis of uncertainty estimates for classification with rejection."
authors = ["Arthur Thuy <arthur.thuy@ugent.be>"]
maintainers = ["Arthur Thuy <arthur.thuy@ugent.be>"]
license = "Apache License 2.0"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
scipy = "^1.9.3"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
